--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 {% url 'home' as home_url %}
 
 <!DOCTYPE html>
@@ -18,13 +20,16 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
 </head>
 
 <body class="d-flex flex-column h-100 main-bg">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+    <nav class="navbar navbar-expand-lg shadow-sm">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Git Comet</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
@@ -45,7 +50,7 @@
         </div>
     </nav>
 
-    <header class="bg-light py-5">
+    <header class="py-5">
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
@@ -64,7 +69,7 @@
         </div>
     </main>
 
-    <footer class="bg-white text-center py-3 shadow-sm mt-auto">
+    <footer class="text-center py-3 shadow-sm mt-auto">
         <div class="container">
             <p class="mb-0">© 2025 Git Comet. All rights reserved.</p>
         </div>
