--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,9 @@
     <title>Git Comet</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <!-- Favicon -->
+    <link rel="icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon">
+
     <!-- Google Fonts CSS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
@@ -40,7 +43,10 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link {% if request.path == home_url %}active{% endif %}" aria-current="page"
-                            href="#">Home</a>
+                            href="{% url 'home' %}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'contact-us' %}">Contact Us</a>
                     </li>
                 </ul>
                 <span class="navbar-text">
@@ -49,18 +55,6 @@
             </div>
         </div>
     </nav>
-
-    <header class="py-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8">
-                    <h1 class="display-4">Welcome to Git Comet</h1>
-                    <p class="lead">Objectively subjectively the worlds best coding forum!</p>
-                </div>
-            </div>
-        </div>
-    </header>
-
     <main class="flex-shrink-0 main-bg py-4">
         <div class="container">
             {% block content %}
@@ -71,6 +65,18 @@
 
     <footer class="text-center py-3 shadow-sm mt-auto">
         <div class="container">
+            <div class="social-links">
+                <a href="https://www.instagram.com" target="_blank" class="mx-2">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="https://www.youtube.com" target="_blank" class="mx-2">
+                    <i class="fab fa-youtube"></i>
+                </a>
+                <a href="https://www.twitter.com" target="_blank" class="mx-2">
+                    <i class="fab fa-twitter"></i>
+                </a>
+            </div>
+            <br>
             <p class="mb-0">© 2025 Git Comet. All rights reserved.</p>
         </div>
     </footer>
