--- a/static/css/style.css
+++ b/static/css/style.css
@@ -276,3 +276,22 @@ footer {
     border-radius: 4px;
     background-color: #d73c0f; /* Slightly darker background for the paragraph */
 }
+
+/* Pagination Styles */
+.pagination .page-link {
+    color: #f5f5f5; /* Default text color */
+    background-color: #2e2e2e; /* Background color */
+    border: 1px solid #444; /* Border color */
+}
+
+.pagination .page-link:hover {
+    color: #E84610; /* Hover text color */
+    background-color: #1e1e1e; /* Hover background color */
+    border-color: #E84610; /* Hover border color */
+}
+
+.pagination .page-item.active .page-link {
+    color: #fff; /* Active text color */
+    background-color: #E84610; /* Active background color */
+    border-color: #E84610; /* Active border color */
+}
