--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,11 @@
 {% load static %}
 
 {% url 'home' as home_url %}
+{% url 'contact-us' as contact_us_url %}
+{% url 'bio' as bio_url %}
+{% url 'account_login' as login_url %}
+{% url 'account_signup' as signup_url %}
+{% url 'account_logout' as logout_url %}
 
 <!DOCTYPE html>
 <html class="h-100" lang="en">
@@ -23,7 +28,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    
+
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
@@ -48,10 +53,28 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'contact-us' %}">Contact Us</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path == bio_url %}active{%endif%}" aria-current="page" href="{% url 'mybio' %}">Bio</a>
+                    </li>
                 </ul>
                 <span class="navbar-text">
                     Welcome to Git Comet
                 </span>
+                {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link {% if request.path == logout_url %}active{% endif %}" aria-current="page"
+                        href="{% url 'account_logout' %}">Logout</a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link {% if request.path == signup_url %}active{% endif %}" aria-current="page"
+                        href="{% url 'account_signup' %}">Register</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link {% if request.path == login_url %}active{% endif %}" aria-current="page"
+                        href="{% url 'account_login' %}">Login</a>
+                </li>
+                {% endif %}
             </div>
         </div>
     </nav>
