--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -14,9 +14,9 @@
 </header>
 
 <!-- index.html content starts here -->
-<div class="container-fluid">
+<div class="container-fluid post-row">
     <div class="row">
-
+        <h1 class="posts-heading">Posts</h1>
         <!-- Blog Entries Column -->
         <div class="col-12 mt-3 left">
             <div class="row">
@@ -34,7 +34,7 @@
                             </a>
                             <p class="card-text">{{ post.excerpt }}</p>
                             <h2 class="card-text">Author: {{ post.author }}</h2>
-                            <hr/>
+                            <hr />
                             <p class="card-text text-muted h6">{{ post.date_posted }}</p>
                             <p class="card-text rating">Rating: {{ post.total_votes }}</p>
                         </div>
