--- a/templates/base.html
+++ b/templates/base.html
@@ -61,9 +61,15 @@
                     {% endif %}
                 </ul>
                 <span class="navbar-text">
-                    <img src="{% static 'images/nobody.jpg' %}" alt="Git Comet" width="50" height="50"
-                        data-bs-toggle="collapse" data-bs-target="#userMenu" aria-controls="userMenu"
-                        aria-expanded="false" aria-label="Toggle user menu">
+                    {% if user.is_authenticated and user.userprofile.profile_picture %}
+                        <img src="{{ user.userprofile.profile_picture }}" alt="Profile Picture" width="50" height="50"
+                            data-bs-toggle="collapse" data-bs-target="#userMenu" aria-controls="userMenu"
+                            aria-expanded="false" aria-label="Toggle user menu">
+                    {% else %}
+                        <img src="{% static 'images/nobody.jpg' %}" alt="Git Comet" width="50" height="50"
+                            data-bs-toggle="collapse" data-bs-target="#userMenu" aria-controls="userMenu"
+                            aria-expanded="false" aria-label="Toggle user menu">
+                    {% endif %}
                 </span>
                 <div class="collapse" id="userMenu">
                     <ul class="navbar-nav">
@@ -136,6 +142,17 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
     </script>
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <!-- jQuery File Upload Plugin -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-file-upload/10.31.0/js/jquery.fileupload.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-file-upload/10.31.0/js/jquery.iframe-transport.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-file-upload/10.31.0/js/jquery.fileupload-process.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-file-upload/10.31.0/js/jquery.fileupload-validate.min.js"></script>
+
+    <!-- Cloudinary jQuery Plugin -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/cloudinary-jquery-file-upload/2.5.0/cloudinary-jquery-file-upload.min.js"></script>
     {% if not user.is_authenticated %}
     <script>
         document.addEventListener('DOMContentLoaded', function() {
