--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -37,6 +37,16 @@
                             <hr />
                             <p class="card-text text-muted h6">{{ post.date_posted }}</p>
                             <p class="card-text rating">Rating: {{ post.total_votes }}</p>
+                            <div class="vote-buttons">
+                                <form method="post" action="{% url 'upvote' post.id %}">
+                                    {% csrf_token %}
+                                    <button type="submit" class="btn btn-link"><i class="fas fa-arrow-up"></i></button>
+                                </form>
+                                <form method="post" action="{% url 'downvote' post.id %}">
+                                    {% csrf_token %}
+                                    <button type="submit" class="btn btn-link"><i class="fas fa-arrow-down"></i></button>
+                                </form>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -70,5 +80,4 @@
     {% endif %}
 </div>
 
-<!-- index.html content ends here -->
-{% endblock %}
+{% endblock content %}
