--- a/forum/templates/forum/post_detail.html
+++ b/forum/templates/forum/post_detail.html
@@ -20,7 +20,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-12 card mb-4 mt-3 left top">
+        <div class="col-12 card mb-4 mt-3 left top post-content">
             <div class="card-body">
                 <!-- The post content goes inside the card-text. -->
                 <!-- Use the | safe filter inside the template tags -->
@@ -38,7 +38,7 @@
             <h2 class="comments-heading">Comments</h2>
             {% for comment in comments %}
                 <div class="card mb-3">
-                    <div class="card-body">
+                    <div class="card-body comment-content">
                         <p><strong>{{ comment.author.username }}</strong> said:</p>
                         <p>{{ comment.content }}</p>
                         <p><small>{{ comment.date_posted }}</small></p>
