--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-md-8">
                 <h1 class="display-4">Welcome to Git Comet</h1>
-                <p class="lead">Objectively subjectively the worlds best coding forum!</p>
+                <p class="lead">Objectively subjectively the world's best coding forum!</p>
             </div>
         </div>
     </div>
@@ -53,34 +53,74 @@
                         </div>
                     </div>
                 </div>
-                {% if forloop.counter|divisibleby:3 and not forloop.last %}
-            </div>
-            <div class="row">
-                {% endif %}
                 {% endfor %}
             </div>
         </div>
     </div>
-    {% if is_paginated %}
-    <nav aria-label="Page navigation">
-        <ul class="pagination justify-content-center">
-            {% if page_obj.has_previous %}
-            <li class="page-item">
-                <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
-                    <span aria-hidden="true">&laquo; Previous</span>
-                </a>
-            </li>
-            {% endif %}
-            {% if page_obj.has_next %}
-            <li class="page-item">
-                <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
-                    <span aria-hidden="true">Next &raquo;</span>
-                </a>
-            </li>
-            {% endif %}
-        </ul>
-    </nav>
-    {% endif %}
 </div>
 
-{% endblock content %}
+{% if user.is_authenticated and draft_posts %}
+<div class="container-fluid post-row">
+    <div class="row">
+        <h1 class="posts-heading">Draft Posts</h1>
+        <div class="col-12 mt-3 left">
+            <div class="row">
+                {% for post in draft_posts %}
+                <div class="col-md-4">
+                    <div class="card mb-4">
+                        <div class="card-body">
+                            <div class="image-container">
+                                <div class="image-flash">
+                                    <p class="author">Author: {{ post.author }}</p>
+                                </div>
+                            </div>
+                            <a href="{% url 'post-detail' post.slug %}" class="post-link">
+                                <h2 class="card-title">{{ post.title }}</h2>
+                            </a>
+                            <p class="card-text">{{ post.excerpt }}</p>
+                            <h2 class="card-text">Author: {{ post.author }}</h2>
+                            <hr />
+                            <p class="card-text text-muted h6">{{ post.date_posted }}</p>
+                            <p class="card-text rating">Rating: {{ post.total_votes }}</p>
+                            <div class="vote-buttons">
+                                <form method="post" action="{% url 'upvote' post.id %}">
+                                    {% csrf_token %}
+                                    <button type="submit" class="btn btn-link"><i class="fas fa-arrow-up"></i></button>
+                                </form>
+                                <form method="post" action="{% url 'downvote' post.id %}">
+                                    {% csrf_token %}
+                                    <button type="submit" class="btn btn-link"><i class="fas fa-arrow-down"></i></button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+</div>
+{% endif %}
+
+{% if is_paginated %}
+<nav aria-label="Page navigation">
+    <ul class="pagination justify-content-center">
+        {% if page_obj.has_previous %}
+        <li class="page-item">
+            <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
+                <span aria-hidden="true">&laquo; Previous</span>
+            </a>
+        </li>
+        {% endif %}
+        {% if page_obj.has_next %}
+        <li class="page-item">
+            <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
+                <span aria-hidden="true">Next &raquo;</span>
+            </a>
+        </li>
+        {% endif %}
+    </ul>
+</nav>
+{% endif %}
+
+{% endblock %}
