--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -63,7 +63,7 @@
 {% if user.is_authenticated and draft_posts %}
 <div class="container-fluid post-row">
     <div class="row">
-        <h1 class="posts-heading">Draft Posts</h1>
+        <h1 class="draft-posts-heading">Draft Posts</h1>
         <div class="col-12 mt-3 left">
             <div class="row">
                 {% for post in draft_posts %}
