--- a/forum/templates/forum/post_detail.html
+++ b/forum/templates/forum/post_detail.html
@@ -80,7 +80,7 @@
         <div class="col-12">
             <h2 class="comments-heading">Comments</h2>
             {% for comment in comments %}
-                <div class="card mb-3">
+                <div class="card mb-3 comment-card">
                     <div class="card-body comment-content">
                         <p><strong>{{ comment.author.username }}</strong> said:</p>
                         <p>{{ comment.content }}</p>
