--- a/templates/base.html
+++ b/templates/base.html
@@ -61,9 +61,15 @@
                     {% endif %}
                 </ul>
                 <span class="navbar-text">
+                    {% if user.is_authenticated %}
+                    <img src="{{ user.userprofile.profile_picture }}" alt="Profile Picture" width="50" height="50"
+                        data-bs-toggle="collapse" data-bs-target="#userMenu" aria-controls="userMenu"
+                        aria-expanded="false" aria-label="Toggle user menu">
+                    {% else %}
                     <img src="{% static 'images/default-profile.png' %}" alt="Profile Picture" width="50" height="50"
                         data-bs-toggle="collapse" data-bs-target="#userMenu" aria-controls="userMenu"
                         aria-expanded="false" aria-label="Toggle user menu">
+                    {% endif %}
                 </span>
                 <div class="collapse" id="userMenu">
                     <ul class="navbar-nav">
